--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -390,6 +390,8 @@
             android:process=":pushservice">
         </service>
         <service android:name="com.ouzhongiot.ozapp.service.PushIntentService"/>
+
+        <meta-data android:name="android.max_aspect" android:value="2.4" />
     </application>
 
 </manifest>
