--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.ouzhongiot.ozapp"
+        applicationId "com.zhuoying.iot"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 562
@@ -22,6 +22,22 @@ android {
             abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "mips", "mips64", "x86", "x86_64"
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile = file("wxf.keystore")
+            storePassword "111111"
+            keyAlias "wxf"
+            keyPassword "111111"
+        }
+
+        release {
+            storeFile = file("wxf.keystore")
+            storePassword "111111"
+            keyAlias "wxf"
+            keyPassword "111111"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -31,7 +47,14 @@ android {
 //            shrinkResources true
 //            buildConfigField("boolean", "LOG", "false")
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
+
+        debug {
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+
     }
 
     sourceSets {
@@ -45,6 +68,11 @@ android {
         exclude 'META-INF/license.txt'
     }
 
+    productFlavors {
+        web {
+
+        }
+    }
 }
 
 dependencies {
@@ -58,4 +86,8 @@ dependencies {
     compile 'in.srain.cube:ptr-load-more:1.0.5'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.alibaba:fastjson:1.1.55.android'
+
+    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+
 }
