--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
     <application
         android:name=".OZApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/icon_bule"
+        android:icon="@mipmap/icon_blue"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
@@ -346,7 +346,7 @@
             android:name=".service.TCPService"
             android:enabled="true"
             android:exported="false"
-            android:icon="@mipmap/icon_bule">
+            android:icon="@mipmap/icon_blue">
 
         </service>
 
