--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
+        classpath 'com.android.tools.build:gradle:3.2.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,6 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         //个推 Maven URL地址
         maven {
@@ -27,3 +30,16 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+
+ext {
+
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.2"
+    supportLibraryVersion = "26.0.2"
+
+    minSdkVersion = 19
+    targetSdkVersion = 26
+
+
+
+}
